--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,3 +6,19 @@
 {
   background-image: none;
 }
+
+#toast-success {
+  animation: slide-up 1s ease-in-out forwards;
+  animation-delay: 2s; 
+}
+
+@keyframes slide-up {
+  80% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+}
